<resources>
    <string name="app_name">OK Goods</string>
    <string name="title_activity_main">OK</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_select_shop">Select shop</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_history_details">History details</string>
    <string name="title_activity_goods_catalog">Goods catalog</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_general_city">City</string>
    <string name="pref_description_general_city">Select your city</string>
    <string name="pref_title_notifications_show_notification">Show notification</string>
    <string name="pref_description_notifications_show_notification">Enables notification</string>
    <string name="rub_currency">%1$.2f rub.</string>
    <string name="rub_currency_count">%1$.2f rub. x %2$.1f</string>
    <string name="add_good_to_list">Add good to list</string>
    <string name="category">Category</string>
    <string name="own_category">Own category</string>
    <string name="own_good">Own good</string>
    <string name="good_details">Good details</string>
    <string name="total">Total:</string>
    <string name="add_good">Add good</string>
    <string name="delete_goods">Delete goods</string>
    <string name="start">Start</string>
    <string name="history">History</string>
    <string name="update_db">Update database</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="show_map">Show map</string>
    <string name="hide_map">Hide map</string>
    <string name="shop">Shop:</string>
    <string name="select_shop">Select shop</string>
    <string name="show_list">Show list</string>
    <string name="hide_list">Hide list</string>
    <string name="filter">Filter</string>
    <string name="details_for_shop">Shop details</string>
    <string name="nearest_shop">The nearest shop</string>
    <string name="undefined_shop">Undefined shop</string>
    <string name="phone">Phone:</string>
    <string name="work_hours">Work hours:</string>
    <string name="square">Square:</string>
    <string name="opening_date">Opening date:</string>
    <string name="parking_places">Parking places:</string>
    <string name="number_of_cashboxes">Number of cashboxes:</string>
    <string name="services">Services:</string>
    <string name="photos">Photos:</string>
    <string name="all_day">All day</string>
    <string name="square_value">%1$d m&#178;</string>
    <string name="hypermarket">Hypermarket</string>
    <string name="supermarket">Supermarket</string>
    <string name="goods_catalog">Goods catalog</string>
    <string name="show_catalog">Show catalog</string>
    <string name="hide_catalog">Hide catalog</string>
    <string name="expand">Expand</string>
    <string name="time">Time: %1$s</string>
    <string name="no_information">No information</string>
    <string name="city_moscow">Moscow</string>
    <string name="city_st_petersburg">St. Petersburg</string>
    <string name="city_astrakhan">Astrakhan</string>
    <string name="city_volgograd">Volgograd</string>
    <string name="city_voronezh">Voronezh</string>
    <string name="city_ekaterinburg">Ekaterinburg</string>
    <string name="city_ivanovo">Ivanovo</string>
    <string name="city_irkutsk">Irkutsk</string>
    <string name="city_krasnodar">Krasnodar</string>
    <string name="city_krasnoyarsk">Krasnoyarsk</string>
    <string name="city_lipetsk">Lipetsk</string>
    <string name="city_murmansk">Murmansk</string>
    <string name="city_nizhniy_novgorod">Nizhniy Novgorod</string>
    <string name="city_novosibirsk">Novosibirsk</string>
    <string name="city_novocherkassk">Novocherkassk</string>
    <string name="city_omsk">Omsk</string>
    <string name="city_orenburg">Orenburg</string>
    <string name="city_rostov_on_don">Rostov-on-Don</string>
    <string name="city_saratov">Saratov</string>
    <string name="city_sochi">Sochi</string>
    <string name="city_stavropol">Stavropol</string>
    <string name="city_sterlitamak">Sterlitamak</string>
    <string name="city_surgut">Surgut</string>
    <string name="city_syktyvkar">Syktyvkar</string>
    <string name="city_tolyatti">Tolyatti</string>
    <string name="city_tyumen">Tyumen</string>
    <string name="city_ufa">Ufa</string>
    <string name="city_cherepovets">Cherepovets</string>
    <string name="service_clearing_settlement">Clearing settlement</string>
    <string name="service_cosmetics">Cosmetics</string>
    <string name="service_playground">Playground</string>
    <string name="service_fish_island">Fish island</string>
    <string name="service_bakery">Bakery</string>
    <string name="service_cookery">Cookery</string>
    <string name="service_taxi_ordering">Taxi ordering</string>
    <string name="service_pharmacy">Pharmacy</string>
    <string name="service_ordering_food">Ordering food</string>
    <string name="service_degustation">Degustation</string>
    <string name="service_cafe">Cafe</string>
    <string name="service_gift_cards">Gift cards</string>
    <string name="service_parking">Parking</string>
    <string name="service_point_of_issuing_orders">Point of issuing orders</string>
    <string name="shop_moscow_hypermarket_ok_rostokino">Hypermarket OK «Rostokino»</string>
    <string name="shop_moscow_supermarket_ok_moscow_leninskiy">Supermarket OK «Moscow Leninskiy»</string>
    <string name="shop_moscow_hypermarket_ok_pyatnitskoe_7km">Hypermarket OK «Pyatnitskoe 7km»</string>
    <string name="shop_moscow_supermarket_ok_venevskaya">Supermarket OK «Venevskaya»</string>
    <string name="shop_moscow_supermarket_ok_lobnya_krasnopolyanskiy">Supermarket OK «Lobnya Krasnopolyanskiy</string>
    <string name="shop_moscow_supermarket_ok_lyubertsy_grenada">Supermarket OK «Lyubertsy Grenada»</string>
    <string name="shop_moscow_hypermarket_ok_putilkovo">Hypermarket OK «Putilkovo»</string>
    <string name="shop_moscow_supermarket_ok_varshavskoe_sombrero">Supermarket OK «Varshavskoe Sombrero»</string>
    <string name="shop_moscow_hypermarket_ok_iyun_mytishchi">Hypermarket OK «Iyun Mytishchi»</string>
    <string name="shop_moscow_hypermarket_ok_noginsk_borilovo">Hypermarket OK «Noginsk Borilovo»</string>
    <string name="shop_moscow_supermarket_ok_zelenograd_panfilovskiy">Supermarket OK «Zelenograd Panfilovskiy»</string>
    <string name="shop_moscow_hypermarket_ok_gud_zon">Hypermarket OK «GUD ZON»</string>
    <string name="shop_moscow_hypermarket_ok_moscow_rio">Hypermarket OK «Moscow Rio»</string>
    <string name="shop_moscow_hypermarket_ok_vesna_altufevo">Hypermarket OK «Vesna Altufevo»</string>
    <string name="shop_moscow_hypermarket_ok_vodnyy">Hypermarket OK «Vodnyy»</string>
    <string name="shop_moscow_hypermarket_ok_kirovogradskaya_kolumbus">Hypermarket OK «Kirovogradskaya Kolumbus»</string>
    <string name="shop_moscow_supermarket_ok_moscow_balaklavskiy">Supermarket OK «Moscow Balaklavskiy»</string>
    <string name="shop_st_petersburg_hypermarket_ok_ladozhskaya">Hypermarket OK «Ladozhskaya»</string>
    <string name="shop_st_petersburg_hypermarket_ok_bogatyrskiy">Hypermarket OK «Bogatyrskiy»</string>
    <string name="shop_st_petersburg_hypermarket_ok_vyborgskoe">Hypermarket OK «Vyborgskoe»</string>
    <string name="shop_st_petersburg_supermarket_ok_zelenogorsk_vokzalnaya">Supermarket OK «Zelenogorsk Vokzalnaya»</string>
    <string name="shop_st_petersburg_hypermarket_ok_kolpino">Hypermarket OK «Kolpino»</string>
    <string name="shop_st_petersburg_supermarket_ok_rybatskoe">Supermarket OK «Rybatskoe»</string>
    <string name="shop_st_petersburg_hypermarket_ok_grand_kanon">Hypermarket OK «Grand-Kanon»</string>
    <string name="shop_st_petersburg_hypermarket_ok_industrialnyy">Hypermarket OK «Industrialnyy»</string>
    <string name="shop_st_petersburg_hypermarket_ok_balkanskaya">Hypermarket OK «Balkanskaya»</string>
    <string name="shop_st_petersburg_hypermarket_ok_lenehkspo">Hypermarket OK «Lenehkspo»</string>
    <string name="shop_st_petersburg_hypermarket_ok_ozerki">Hypermarket OK «Ozerki»</string>
    <string name="shop_st_petersburg_hypermarket_ok_pulkovskoe">Hypermarket OK «Pulkovskoe»</string>
    <string name="shop_st_petersburg_hypermarket_ok_ehlektrosila">Hypermarket OK «Ehlektrosila»</string>
    <string name="shop_st_petersburg_supermarket_ok_parashyutnaya">Supermarket OK «Parashyutnaya»</string>
    <string name="shop_st_petersburg_hypermarket_ok_bogatyrskiy_yakhtennaya">Hypermarket OK «Bogatyrskiy Yakhtennaya»</string>
    <string name="shop_st_petersburg_hypermarket_ok_gatchina_leningradskoe">Hypermarket OK «Gatchina Leningradskoe»</string>
    <string name="shop_st_petersburg_hypermarket_ok_tallinskoe_shosse">Hypermarket OK «Tallinskoe shosse»</string>
    <string name="shop_st_petersburg_supermarket_ok_leninskiy">Supermarket OK «Leninskiy»</string>
    <string name="shop_st_petersburg_supermarket_ok_galereya">Supermarket OK «Galereya»</string>
    <string name="shop_st_petersburg_supermarket_ok_savushkina">Supermarket OK «Savushkina»</string>
    <string name="shop_st_petersburg_supermarket_ok_kingisepp_oktyabrskaya">Supermarket OK «Kingisepp Oktyabrskaya»</string>
    <string name="shop_st_petersburg_supermarket_ok_shcherbakova">Supermarket OK «Shcherbakova»</string>
    <string name="shop_st_petersburg_supermarket_ok_nastavnikov">Supermarket OK «Nastavnikov»</string>
    <string name="shop_st_petersburg_supermarket_ok_krylenko">Supermarket OK «Krylenko»</string>
    <string name="shop_st_petersburg_supermarket_ok_iskrovskiy">Supermarket OK «Iskrovskiy»</string>
    <string name="shop_st_petersburg_supermarket_ok_solidarnosti">Supermarket OK «Solidarnosti»</string>
    <string name="shop_st_petersburg_supermarket_ok_sizova">Supermarket OK «Sizova»</string>
    <string name="shop_st_petersburg_supermarket_ok_sestroretsk_volodarskogo">Supermarket OK «Sestroretsk Volodarskogo»</string>
    <string name="shop_st_petersburg_supermarket_ok_krasnoe_selo_strelninskoe">Supermarket OK «Krasnoe selo Strelninskoe»</string>
    <string name="shop_st_petersburg_hypermarket_ok_rio">Hypermarket OK «Rio»</string>
    <string name="shop_st_petersburg_hypermarket_ok_akademicheskaya">Hypermarket OK «Akademicheskaya»</string>
    <string name="shop_st_petersburg_hypermarket_ok_savushkina">Hypermarket OK «Savushkina»</string>
    <string name="shop_st_petersburg_supermarket_ok_planernaya">Supermarket OK «Planernaya»</string>
    <string name="shop_st_petersburg_supermarket_ok_lenskaya">Supermarket OK «Lenskaya»</string>
    <string name="shop_st_petersburg_hypermarket_ok_bolshevikov">Hypermarket OK «Bolshevikov»</string>
    <string name="shop_st_petersburg_hypermarket_ok_tipanova">Hypermarket OK «Tipanova»</string>
    <string name="shop_st_petersburg_hypermarket_ok_zhukova">Hypermarket OK «Zhukova»</string>
    <string name="shop_st_petersburg_supermarket_ok_kolpino_trudyashchikhsya">Supermarket OK «Kolpino Trudyashchikhsya»</string>
    <string name="shop_st_petersburg_supermarket_ok_kolpino_tverskaya">Supermarket OK «Kolpino Tverskaya»</string>
    <string name="shop_st_petersburg_hypermarket_ok_partizana_germana">Hypermarket OK «Partizana Germana»</string>
    <string name="shop_astrakhan_hypermarket_ok_astrakhan_alimpik">Hypermarket OK «Astrakhan Alimpik»</string>
    <string name="shop_astrakhan_supermarket_ok_astrakhan_tri_kota">Supermarket OK «Astrakhan Tri kota»</string>
    <string name="shop_astrakhan_hypermarket_ok_astrakhan_vokzalnaya">Hypermarket OK «Astrakhan Vokzalnaya»</string>
    <string name="shop_volgograd_hypermarket_ok_volgograd_diamant">Hypermarket OK «Volgograd Diamant»</string>
    <string name="no_value" translatable="false">--------</string>
</resources>