<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:grid="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/common_margin"
            android:layout_marginRight="@dimen/common_margin">

            <CheckBox
                android:id="@+id/supermarketCheckBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/supermarket" />

            <CheckBox
                android:id="@+id/hypermarketCheckBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/hypermarket" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/allDayCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_margin"
            android:layout_marginRight="@dimen/common_margin"
            android:text="@string/all_day" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_margin"
            android:layout_marginRight="@dimen/common_margin"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            android:text="@string/services" />

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            grid:alignmentMode="alignBounds"
            grid:orientation="vertical"
            grid:rowCount="3"
            grid:useDefaultMargins="true">

            <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
                android:id="@+id/serviceClearingSettlementButton"
                android:layout_width="@dimen/shop_filter_service_button_size"
                android:layout_height="@dimen/shop_filter_service_button_size"
                android:contentDescription="@string/service_clearing_settlement"
                android:src="@drawable/service_clearing_settlement"
                android:scaleType="centerInside"
                style="@style/ShopFilterServiceButtonStyle" />

            <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
                android:id="@+id/serviceCosmeticsButton"
                android:layout_width="@dimen/shop_filter_service_button_size"
                android:layout_height="@dimen/shop_filter_service_button_size"
                android:contentDescription="@string/service_cosmetics"
                android:src="@drawable/service_cosmetics"
                android:scaleType="centerInside"
                style="@style/ShopFilterServiceButtonStyle" />

            <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
                android:id="@+id/servicePlaygroundButton"
                android:layout_width="@dimen/shop_filter_service_button_size"
                android:layout_height="@dimen/shop_filter_service_button_size"
                android:contentDescription="@string/service_playground"
                android:src="@drawable/service_playground"
                android:scaleType="centerInside"
                style="@style/ShopFilterServiceButtonStyle" />

            <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
                android:id="@+id/serviceFishIslandButton"
                android:layout_width="@dimen/shop_filter_service_button_size"
                android:layout_height="@dimen/shop_filter_service_button_size"
                android:contentDescription="@string/service_fish_island"
                android:src="@drawable/service_fish_island"
                android:scaleType="centerInside"
                style="@style/ShopFilterServiceButtonStyle" />

            <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
                android:id="@+id/serviceBakeryButton"
                android:layout_width="@dimen/shop_filter_service_button_size"
                android:layout_height="@dimen/shop_filter_service_button_size"
                android:contentDescription="@string/service_bakery"
                android:src="@drawable/service_bakery"
                android:scaleType="centerInside"
                style="@style/ShopFilterServiceButtonStyle" />

            <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
                android:id="@+id/serviceCookeryButton"
                android:layout_width="@dimen/shop_filter_service_button_size"
                android:layout_height="@dimen/shop_filter_service_button_size"
                android:contentDescription="@string/service_cookery"
                android:src="@drawable/service_cookery"
                android:scaleType="centerInside"
                style="@style/ShopFilterServiceButtonStyle" />

            <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
                android:id="@+id/serviceTaxiOrderingButton"
                android:layout_width="@dimen/shop_filter_service_button_size"
                android:layout_height="@dimen/shop_filter_service_button_size"
                android:contentDescription="@string/service_taxi_ordering"
                android:src="@drawable/service_taxi_ordering"
                android:scaleType="centerInside"
                style="@style/ShopFilterServiceButtonStyle" />

            <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
                android:id="@+id/servicePharmacyButton"
                android:layout_width="@dimen/shop_filter_service_button_size"
                android:layout_height="@dimen/shop_filter_service_button_size"
                android:contentDescription="@string/service_pharmacy"
                android:src="@drawable/service_pharmacy"
                android:scaleType="centerInside"
                style="@style/ShopFilterServiceButtonStyle" />

            <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
                android:id="@+id/serviceDegustationButton"
                android:layout_width="@dimen/shop_filter_service_button_size"
                android:layout_height="@dimen/shop_filter_service_button_size"
                android:contentDescription="@string/service_degustation"
                android:src="@drawable/service_degustation"
                android:scaleType="centerInside"
                style="@style/ShopFilterServiceButtonStyle" />

            <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
                android:id="@+id/serviceOrderingFoodButton"
                android:layout_width="@dimen/shop_filter_service_button_size"
                android:layout_height="@dimen/shop_filter_service_button_size"
                android:contentDescription="@string/service_ordering_food"
                android:src="@drawable/service_ordering_food"
                android:scaleType="centerInside"
                style="@style/ShopFilterServiceButtonStyle" />

            <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
                android:id="@+id/serviceCafeButton"
                android:layout_width="@dimen/shop_filter_service_button_size"
                android:layout_height="@dimen/shop_filter_service_button_size"
                android:contentDescription="@string/service_cafe"
                android:src="@drawable/service_cafe"
                android:scaleType="centerInside"
                style="@style/ShopFilterServiceButtonStyle" />

            <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
                android:id="@+id/serviceGiftCardsButton"
                android:layout_width="@dimen/shop_filter_service_button_size"
                android:layout_height="@dimen/shop_filter_service_button_size"
                android:contentDescription="@string/service_gift_cards"
                android:src="@drawable/service_gift_cards"
                android:scaleType="centerInside"
                style="@style/ShopFilterServiceButtonStyle" />

            <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
                android:id="@+id/serviceParkingButton"
                android:layout_width="@dimen/shop_filter_service_button_size"
                android:layout_height="@dimen/shop_filter_service_button_size"
                android:contentDescription="@string/service_parking"
                android:src="@drawable/service_parking"
                android:scaleType="centerInside"
                style="@style/ShopFilterServiceButtonStyle" />

            <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
                android:id="@+id/servicePointOfIssuingOrdersButton"
                android:layout_width="@dimen/shop_filter_service_button_size"
                android:layout_height="@dimen/shop_filter_service_button_size"
                android:contentDescription="@string/service_point_of_issuing_orders"
                android:src="@drawable/service_point_of_issuing_orders"
                android:scaleType="centerInside"
                style="@style/ShopFilterServiceButtonStyle" />

        </android.support.v7.widget.GridLayout>

    </LinearLayout>

</ScrollView>
