<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ru.okmarket.okgoods.fragments.GoodsFragment">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="48dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
                android:id="@+id/addButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/add"
                android:contentDescription="@string/add_good"
                style="@style/ToolButtonStyle" />

            <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
                android:id="@+id/deleteButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/delete"
                android:contentDescription="@string/delete_goods"
                style="@style/ToolButtonStyle" />

            <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
                android:id="@+id/startButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/start"
                android:contentDescription="@string/start"
                style="@style/ToolButtonStyle" />

            <ru.okmarket.okgoods.widgets.ImageButtonWithTooltip
                android:id="@+id/historyButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/history"
                android:contentDescription="@string/history"
                style="@style/ToolButtonStyle" />

        </LinearLayout>

    </HorizontalScrollView>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
